# langchain-contrib

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tmux.sh
.github/workflows/: lint.yml  test-no-vcr.yml  test.yml
docs/: conf.py  index.rst  requirements.txt
docs/agents/: agents.rst  dummy.ipynb
docs/chains/: chains.rst  choice.ipynb  dummy.ipynb  fake.ipynb  tool.ipynb  zmultiroute.ipynb
docs/llms/: dummy.ipynb  fake.ipynb  human.ipynb  llms.rst
docs/modules/: langchain_contrib.agents.rst  langchain_contrib.chains.mrkl.rst  langchain_contrib.chains.rst  langchain_contrib.llms.human.rst  langchain_contrib.llms.rst  langchain_contrib.prompts.choice.rst  langchain_contrib.prompts.rst  langchain_contrib.rst  langchain_contrib.tools.rst  langchain_contrib.tools.terminal.patchers.rst  langchain_contrib.tools.terminal.rst  langchain_contrib.utils.rst  langchain_contrib.utils.tests.rst  modules.rst
docs/prompts/: chained.ipynb  choice.ipynb  dummy.ipynb  prefixed.ipynb  prompts.rst  z_base.ipynb
docs/tools/: persistent_terminal.ipynb  safe_terminal.ipynb  smart_terminal.ipynb  tools.rst  z_base.ipynb
langchain_contrib/: __init__.py
langchain_contrib/agents/: __init__.py
langchain_contrib/chains/: __init__.py  choice.py  dummy.py  multiroute.py  testing.py  tool.py
langchain_contrib/chains/mrkl/: __init__.py  choice.py  pick_action.py  pick_action_chain.py  prompt.py
langchain_contrib/llms/: __init__.py  dummy.py  fake.py  testing.py
langchain_contrib/llms/human/: __init__.py  llm.py  patchers.py
langchain_contrib/prompts/: __init__.py  chained.py  dummy.py  schema.py  z_base.py
langchain_contrib/prompts/choice/: template.py
langchain_contrib/tools/: __init__.py  z_base.py
langchain_contrib/tools/terminal/: __init__.py  ansi_escapes.py  safety.py  terminal.py  tool.py
langchain_contrib/tools/terminal/patchers/: __init__.py  langchain_patch.py  vcr_patch.py
langchain_contrib/utilities/: __init__.py
langchain_contrib/utilities/terminal/: __init__.py  ansi_escapes.py  patcher.py
langchain_contrib/utils/: __init__.py  contexts.py  fvalues.py  llm.py  safe.py
langchain_contrib/utils/tests/: __init__.py  contexts.py
tests/: __init__.py  test_pytest_works.py
tests/chains/: __init__.py  test_chain_can_be_chained.yaml  test_chained.py  test_choice.py  test_fake.py  test_multiroute.py  test_tool.py
tests/chains/mrkl/: __init__.py  test_chat_choice.py  test_chat_choice.yaml  test_chat_prompt.py  test_chat_prompt.yaml  test_faked_tool_usage.yaml  test_string_prompt.py  test_string_prompt.yaml
tests/llms/: __init__.py  test_fake.py  test_human_choice.py  test_show_human_llm_menu.yaml
tests/prompts/: __init__.py  test_chained.py  test_choice.py  test_prefixed.py  test_z_base.py
tests/tools/: __init__.py
tests/tools/terminal/: __init__.py  test_ansi_escapes.py  test_edit.yaml  test_proceed.yaml  test_safety.py  test_terminal.py  test_use_terminal.yaml  test_with_agent.py  test_with_fake_llm.py
tests/utilities/: __init__.py
tests/utilities/terminal/: test_ansi_escapes.py  test_terminal.py
tests/utils/: __init__.py  test_contexts.py  test_fvalues.py
